# pghp

./: .gitignore
api/: Cargo.toml
api/config/: defaults.toml  settings.toml.example
api/src/: api.rs  main.rs  serve_client.rs  settings.rs
client/: .prettierrc  package-lock.json  package.json  svelte.config.js
client/src/: app.html
client/src/lib/: Theme.svelte
client/src/lib/stores/: themeSettings.js  themes.json
client/src/routes/: __layout.svelte  index.svelte
