[package]
name = "pghp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
tokio = { version = "1.18.1", features = ["full"] }
sea-orm = "0.7.1"

serde = "1.0.137"
jsonwebtoken = "8.1.0"
bcrypt = "0.12.1"
