[package]
name = "pghp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
tokio = { version = "1.18.1", features = ["full"] }
sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
config = "0.13.1"
serde = "1.0.137"
tower-http = {version = "0.3.2", features = ["fs"] }
jsonwebtoken = "8.1.0"
bcrypt = "0.12.1"
